// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProceedingsAction renders proceedings 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <IconText
          icon={<ForwardRef(BookOutlined) />}
          text="proceedings"
        />
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="12345"
    >
      <LinkWithTargetBlank
        as="a"
        href="/literature/12345"
      >
        <span>
          Proceedings 
          1
        </span>
      </LinkWithTargetBlank>
    </MenuItem>
    <MenuItem
      key="54321"
    >
      <LinkWithTargetBlank
        as="a"
        href="/literature/54321"
      >
        <JournalInfo
          info={
            Immutable.Map {
              "journal_title": "Journal 1",
            }
          }
        />
      </LinkWithTargetBlank>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`ProceedingsAction renders single item 1`] = `
<UserActionWrapper>
  <LinkWithTargetBlank
    as="a"
    href="/literature/12345"
  >
    <IconText
      icon={<ForwardRef(BookOutlined) />}
      text="proceedings"
    />
  </LinkWithTargetBlank>
</UserActionWrapper>
`;
